After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 743151 - JawToplevelClass *klass is defined but not used
JawToplevelClass *klass is defined but not used
Status: RESOLVED FIXED
Product: java-atk-wrapper
Classification: Applications
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: java-atk-wrapper maintainer(s)
java-atk-wrapper maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2015-01-19 00:02 UTC by Magdalen Berns (irc magpie)
Modified: 2015-02-27 16:57 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch to address problem (783 bytes, patch)
2015-01-19 00:05 UTC, Magdalen Berns (irc magpie)
committed Details | Review

Description Magdalen Berns (irc magpie) 2015-01-19 00:02:57 UTC
it should be in G_OBJECT_CLASS(jaw_toplevel_parent_class)->finalize(obj); expression, if it's going to be defined for that!
Comment 1 Magdalen Berns (irc magpie) 2015-01-19 00:05:33 UTC
Created attachment 294829 [details] [review]
Patch to address problem
Comment 2 André Klapper 2015-02-27 16:57:56 UTC
[Moving at-spi/java-atk-wrapper bugs to separate product. See bug 740075]