use defined top level klass

Bug: https://bugzilla.gnome.org/show_bug.cgi?id=743151